--- a/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
+++ b/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
@@ -781,8 +781,9 @@
    "source": [
     "# TODO: define your model\n",
     "#Without manual feature engineering/dimentionlity reduction  \n",
-    "#Main reference: https://blog.goodaudience.com/introduction-to-1d-convolutional-neural-networks-in-keras-for-time-sequences-3a7ff801a2c\n",
-    "        \n",
+    "#Main reference on 1DCNN:   \n",
+    "#https://blog.goodaudience.com/introduction-to-1d-convolutional-neural-networks-in-keras-for-time-sequences-3a7ff801a2cf\n",
+    "    \n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, layers, models\n",
     "from tensorflow.keras.models import Sequential\n",
