--- a/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
+++ b/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
@@ -1516,7 +1516,7 @@
     }
    ],
    "source": [
-    "#TODO: Path(2) Extracted feature (Rank 2) can go into the following outlier detection\n",
+    "#TODO: Path(2) Extracted feature (1X2) can go into the following outlier detection\n",
     "encoded_spectrum"
    ]
   },
@@ -1707,7 +1707,7 @@
     "    plt.suptitle(\"Outlier detection\")\n",
     "plt.show()\n",
     "\n",
-    "# Now, we will need to adapt input from the example code to our encoded rank2 features.\n",
+    "# Now, we will need to adapt input from the example code to our encoded 1X2 features.\n",
     "# (not included in this notebook)\n",
     "    "
    ]
