Add autoencoder ref

--- a/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
+++ b/Final_DAMADAY2020WithNASA_workshop_notebook.ipynb
@@ -1403,7 +1403,7 @@
    ],
    "source": [
     "# TODO: Now, change Input/model to 1d Spectrum for outlier detection\n",
-    "\n",
+    "# Idea adopted from https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9187620\n",
     "#  define your model\n",
     "#X_train: (21348, 1958) is input and output.\n",
     " \n",
